[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-agent-queue"
version = "0.1.0"
description = "Filesystem queue worker for CLI agents with workspace isolation, timeouts, and audit logs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Bruno Petrovic", email = "bruno@example.com"}]
keywords = ["cli", "agent", "queue", "worker", "sandbox"]
classifiers = ["Development Status :: 4 - Beta", "Environment :: Console", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Software Development :: Libraries :: Python Modules"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
safe-agent-queue = "safe_agent_queue.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]